Fri Jul 14 15:35:24 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Use -D_REENTRANT if pthreads are being used (fixes bugs on Linux, at the
	  least).

	* Remove further reference to C++ style IO in threadtest.

Fri Jul 14 14:16:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Rework debugging system so that it uses C style IO, and has various other
	  improvements.

Fri Jul 14 14:07:00 BST 2000 Olly Betts

	* Updated .cvsignore-s

Fri Jul 14 14:03:00 BST 2000 Olly Betts

	* Removed trailing whitespace from various files.

Fri Jul 14 12:28:00 BST 2000 Olly Betts

	* apitest: near1 and phrase1 now run boolean queries since we only
	  care which documents are returned, and not the ordering; added
	  regression test for PHRASE order bug fixed yesterday to phrase1

Thu Jul 13 19:13:15 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Now well on the way to reimplementing BackendManager in java, so
	  that we can run some real tests.

Thu Jul 13 18:21:00 BST 2000 Olly Betts

	* inmemory_positionlist.cc: removed suprious `;'.

	* localmatch.cc: fixed problem with phrase being passed vector of
	  PostList-s in wrong order.

	* Created delve utility to inspect posting lists, term lists, and
	  position lists.

Wed Jul 12 18:48:52 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Work on java bindings - OmWritableDatabase added.
	  OmDocumentContents still needs adding.

Wed Jul 12 17:19:25 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added test_msetzeroitems1 to apitest, to check that statistics are
	  correctly returned when an empty mset is requested.

Wed Jul 12 17:05:26 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added much debugging information to weight calculation, and
	  term frequency and weight stuff now appears to work.

Wed Jul 12 14:38:43 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More work on returning term frequency and weight information.