@@ -28,6 +28,17 @@
 #include <sys/stat.h>
 #include <unistd.h>
 #include <cerrno>
+#include <vector>
+
+using std::cout;
+using std::endl;
+using std::vector;
+using std::string;
+using std::ostream_iterator;
+using std::map;
+using std::auto_ptr;
+using std::max;
+using std::ostream;
 
 #include "om/om.h"
 #include "testsuite.h"
